--- a/roles/shipping/files/systemd.service
+++ b/roles/shipping/files/systemd.service
@@ -4,7 +4,7 @@ Description=Shipping Service
 [Service]
 User=roboshop
 Environment=CART_ENDPOINT=cart.roboshop.internal:8080
-Environment=DB_HOST=mysql
+Environment=DB_HOST=mysql.roboshop.ine
 ExecStart=/bin/java -jar /home/roboshop/shipping/shipping.jar
 SyslogIdentifier=shipping
 
