--- a/roles/rabbitmq/tasks/main.yml
+++ b/roles/rabbitmq/tasks/main.yml
@@ -3,7 +3,7 @@
     name: https://github.com/rabbitmq/erlang-rpm/releases/download/v23.2.6/erlang-23.2.6-1.el7.x86_64.rpm
 
 - name: Setup YUM repos
-  
+  copy: 
    
 - name: Install RabbitMQ Server
   yum: 
