--- a/roles/rabbitmq/tasks/main.yml
+++ b/roles/rabbitmq/tasks/main.yml
@@ -5,7 +5,7 @@
 - name: Setup YUM repos
   copy: 
     src: rabbitmq.repo
-    dest: 
+    dest: /etc/yum.repo
    
 - name: Install RabbitMQ Server
   yum: 
