--- Auto-Git Commit ---

--- a/roles/rabbitmq/tasks/main.yml
+++ b/roles/rabbitmq/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: Install Erlang 
   yum: 
     name: https://github.com/rabbitmq/erlang-rpm/releases/download/v23.2.6/erlang-23.2.6-1.el7.x86_64.rpm
-
+    state: present
 - name: Setup YUM repos
   copy: 
     src: rabbitmq.repo
